fix flash message overflow

--- a/src/www/assets/stylus/modules/BuildProject.styl
+++ b/src/www/assets/stylus/modules/BuildProject.styl
@@ -15,6 +15,7 @@
 
   form
     group()
+    overflow: hidden
 
   .headline
     margin-bottom: 5rem
